--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,7 @@
 known bugs:
     separating array declaration from definition
+    array indexing
+    
     
 to be implemented:
     disallow naming variables with keywords
