--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,6 @@
 known bugs:
     require endfunction keywords
-    stepping negatives
-    evaluating multi expressions
+    terminate infinite loops
     
 to be implemented:
     disallow naming variables with keywords
